test/compile-fail/call__args_less.he
fn main
{
    fn plus (a: int, b: int) { a + b; }
    plus (1); //~ ERROR 3007
}
